refactor: reorganize command classes into faction package